2018-05-13  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/tiff.c (ReadTIFFImage): Fix leak of Image when
	TIFFReadRGBAImage() reports failure.  Also harden buffer
	allocation calculation.  Fixes oss-fuzz 8275
	"graphicsmagick/coder_BIGTIFF_fuzzer: Indirect-leak in
	AllocateImage". (Credit to OSS-Fuzz)

	* coders/ept.c (ReadEPTImage): Add validations of 'count' and
	'filesize' read from EPT file. In response to oss-fuzz 8248
	"graphicsmagick/coder_EPT_fuzzer: Floating-point-exception in
	WriteTIFFImage" but we are unable to recreate the oss-fuzz issue
	since the EPT reader already immediately reports an EOF exception.

2018-05-12  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* fuzzing/oss-fuzz-build.sh: Apply SourceForge patch #57 "Add
	fuzzing support for jpeg + freetype delegates" by Alex Gaynor.

	* coders/png.c (read_user_chunk_callback): Fix memory leak and use
	of uninitialized memory when handling eXIf chunk. Fixes oss-fuzz
	8247 "graphicsmagick/coder_PNG24_fuzzer: Direct-leak in
	png_malloc". (Credit to OSS-Fuzz)

2018-05-11  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* fuzzing/oss-fuzz-build.sh: Apply SourceForge patch #56 "Use a
	few delegate libraries in fuzzing" by Alex Gaynor.

2018-05-10  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* tests/rwfile.tap: MIFF zip and bzip compression tests do not
	fail if zlib and bzlib are not available because the compression
	request is silently changed to no compression.

2018-05-07  Greg Wolfe  <gregory.wolfe@kodakalaris.com>

	* magick/render.c (DrawImage, InsertAttributeIntoInputStream):
	For a reference such as 'class="classname"', the "classname"
	is now allowed to be undefined.

	* coders.svg.c (ProcessStyleClassDefs): Class definitions
	defined within a <style> block may now be empty.

	* These relaxed conditions are not specifically called out in
	the SVG spec as being either acceptable or unacceptable, but
	other SVG renderers (e.g., Chrome) handle them this way. These