@@ -1,3 +1,8 @@
+2018-05-13  Fojtik Jaroslav  <JaFojtik@seznam.cz>
+
+	* coders/mat.c Fix potentional leak when compressed object is 
+        corrupted. Fixes oss-fuzz 8251 (Credit to OSS-Fuzz)
+
 2018-05-13  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
 
 	* coders/tiff.c (ReadTIFFImage): Fix leak of Image when
